1. Services menu dismisses when clicked in any of the menu items 2. social Icons alignment fixed in contact screen 3. Enquiry form completed in fixed icon click on pop up 4. /supplier-form screen design completed 5. /service-details screen completed

--- a/client/src/components/enquryFormService/enquryForm.css
+++ b/client/src/components/enquryFormService/enquryForm.css
@@ -75,3 +75,11 @@
     background-color: #03b2cb;
     padding:20px;
 }
+#ServicesEnquiryForm .ParentButton button:disabled{
+    background-color: #aeb2b3;
+    color: rgb(17, 16, 16);
+    margin-top: 1rem;
+    border-radius: 4px;
+    padding: 5px 20px;
+    text-align: right;
+}
